--- a/polls/templates/polls/contact.html
+++ b/polls/templates/polls/contact.html
@@ -2,18 +2,12 @@
 
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0;">
-	<meta name="description" content="Evergreen quotes from the world famous albums by Tintin, Captain Haddock, Professor Calculus and others." />
-	<meta name="author" content="Petteri Hamalainen" />
-
-	<link rel="apple-touch-icon" href="cv57x57.png"/>
-	<link rel="apple-touch-icon" sizes="72x72" href="cv72x72.png"/>
-	<link rel="apple-touch-icon" sizes="114x114" href="cv114x114.png"/>
-	<link rel="shortcut icon" href="favicon.ico">
-	
-	<title>Daily Tintin</title>
-	
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+<meta name="description" content="Daily Tintin" />
+<meta name="keywords" content="Tintin, generator, quote, Herge" />
+<meta name="author" content="Petteri Hamalainen" />
+<title>Daily Tintin</title>
 <style>
 
 html {
@@ -146,8 +140,8 @@ h2 {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 12px;
-	padding: 30px;
-	margin: 0 0 60px 0;
+	padding: 3px;
+	margin: 0 0 6px 0;
 }
 
 #bubbletop {
@@ -187,6 +181,8 @@ h2 {
   margin: 0 auto;
 }
 
+#error {background-color:#ffffff;border:1px solid #f00;margin:20px auto;padding: 20px;width:600px;}
+#thankyou {background-color:#ffffff;border:1px solid #090;margin:20px auto;padding: 20px;width:600px;}
 
 </style>
 
@@ -194,65 +190,43 @@ h2 {
 
 <body>
 
-<div id="maincontainer">
-
-
-	<div class="headline">
-		<h2>Daily Tintin</h2>
-		Evergreen Quotes Made Famous By Tintin & Co.
-	</div>
-
-	<div class="headline_bottom">
-    <--div class="fbcontainer">
-	
-      <div class="fb-like" data-href="http://www.dailytintin.com"
-        data-width="300" data-layout="button_count" data-action="like"
-        data-show-faces="false" data-share="false">
-      </div>
-    </div-->    
-	</div>
-	
-	<div id="bubblecontainer">
-
-		<div id="bubbletop" style="background-color: {{ quote.bgcolor }}"></div>
-	
-		<div id="bubble" style="background-color: {{ quote.bgcolor }}">{{ quote.text }}</div>
-
-		<div id="bubblebottom"
-			style="background-color: {{ quote.bgcolor }}; 
-			background-image: url(/static/{{ quote.image }}.png), url(/static/bgblur.png), url(/static/bgblur.png); 
-			background-repeat: no-repeat, no-repeat, no-repeat; 
-			background-position: center center, {{ quote.x1 }}px {{ quote.y1 }}px, {{ quote.x2 }}px {{ quote.y2 }}px;">
-			<h4>-{{ quote.name }}</h4>
-			<h3>{{ quote.book }}</h3>
-		</div>
+  <div class="headline">
+    <h2>Daily Tintin</h2>
+    Evergreen Quotes As Made Famous By Tintin & Co.
   </div>
 
-	<div class="infopane">
-		| &nbsp; {{ quote.votes }} votes &nbsp; | &nbsp; <a href="/tintin/vote/{{ quote.id }}">vote
-			for this quote</a> &nbsp; | &nbsp; <a href="/tintin">new quote</a> &nbsp; |
-	
-		<form action="/tintin" method="get">
-		  <label for="char">Choose a character:</label>
-		  <select id="char" name="char">
-			<option value="Random">Random</option>
-			<option value="Tintin">Tintin</option>
-			<option value="Captain Haddoc">Captain Haddoc</option>
-			<option value="Snowy">Snowy</option>
-			<option value="Thomson and Thompson">Thomson & Thompson</option>
-			<option value="Bianca Castafiore">Bianca Castafiore</option>
-			<option value="Professor Calculus">Professor Calculus</option>
-		  </select>
-		  <input type="submit" value="ok">
-		</form>
+  <div class="headline_bottom">
+  </div>
 
-	</div>
-
-</div>
-
-<div class="contact">
-<a href="/tintin/contact">This fine waste of time by Petteri Hamalainen</a>
-</div>
-
+<h2>Hey! I'd love to hear from you, send me a message.</h2>
+  <form action="contact" method="post">
+	  <div class="infopane">
+			  Name or email: <input type="text" name="name"><br>
+	  </div>
+	  <div class="infopane">
+			  Your message: <input type="text" name="message"><br>
+	  </div>
+	  <div class="infopane">  
+			  <input type="submit" value="Submit">
+	  </div>
+  </form>
+    
+   <%
+   String attr = (String) request.getParameter("error");
+   if (attr != null && attr.equals("0")) {
+   %>
+   <div id="error">
+     <span style="text-align:center;color:red">Both fields are required, please fill them in before sending.</span>
+   </div>
+   <%
+   } else if (attr != null && attr.equals("1")) {
+   %>
+   <div id="thankyou">
+     <span style="text-align:center;color:green">Thank you. I will get back to you the soonest. Now <a href="www.dailytintin.com">go back</a>.</span>
+   </div>
+   <%
+   }
+   %>
+    
 </body>
 </html>
