Fine tuning + wrote report

--- a/polls/templates/polls/tintin.html
+++ b/polls/templates/polls/tintin.html
@@ -198,10 +198,7 @@ h2 {
 		Evergreen Quotes Made Famous By Tintin & Co.
 	</div>
 
-	<div class="headline_bottom">
-    <br>
-	Login to vote	
-	</div>
+	<div class="headline_bottom"></div>
 	
 	<div id="bubblecontainer">
 
